syntax = "proto3";

package timesup;

option java_package = "guru.bonacci.timesup.model";
option java_outer_classname = "Countdown";

message ConnectDefault1 {
  string ID = 1;
  string TRACKING_NUMBER = 2;
  int64 CLEANUP_TIME = 3;
}
