syntax = "proto2";

package timesup;

option java_package = "guru.bonacci.timesup.model";
option java_outer_classname = "TheUnmovedGeo";

message UnmovedGeo {
  required string id = 1;
  required float latitude = 2;
  required float longitude = 3;
  required string geohash = 4;
}
